@@ -54,7 +54,7 @@ END
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 0,1,1,0
- PRODUCTVERSION 0,2,1,12
+ PRODUCTVERSION 0,2,1,13
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -76,7 +76,7 @@ BEGIN
             VALUE "LegalTrademarks", "This product includes software developed by the OpenSSL Project for use in the OpenSSL Toolkit (http://www.openssl.org/)"
             VALUE "OriginalFilename", "swish-provider-com_dll.dll"
             VALUE "ProductName", "Swish"
-            VALUE "ProductVersion", "0.2.1.12"
+            VALUE "ProductVersion", "0.2.1.13"
         END
     END
     BLOCK "VarFileInfo"
