@@ -51,8 +51,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,2,1,12
- PRODUCTVERSION 0,2,1,12
+ FILEVERSION 0,2,1,13
+ PRODUCTVERSION 0,2,1,13
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x3L
@@ -69,12 +69,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "Secure access to remote directories from Windows Explorer via SSH/SFTP"
             VALUE "FileDescription", "Swish ATL module and in-proc COM server"
-            VALUE "FileVersion", "0.2.1.12"
+            VALUE "FileVersion", "0.2.1.13"
             VALUE "InternalName", "swish-com_dll"
             VALUE "LegalCopyright", "Copyright (C) 2009 Alexander Lamaison <awl03@doc.ic.ac.uk>"
             VALUE "OriginalFilename", "Swish.dll"
             VALUE "ProductName", "Swish"
-            VALUE "ProductVersion", "0.2.1.12"
+            VALUE "ProductVersion", "0.2.1.13"
         END
     END
     BLOCK "VarFileInfo"
